--- a/package.json
+++ b/package.json
@@ -24,7 +24,18 @@
   },
   "homepage": "https://github.com/valador/barbershop#readme",
   "devDependencies": {
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-compat": "^2.5.1",
+    "eslint-plugin-react": "^7.11.1",
     "node-sass": "^4.9.3",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "stylelint": "^9.5.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-declaration-strict-value": "^1.0.4",
+    "stylelint-no-unsupported-browser-features": "^3.0.1",
+    "stylelint-scss": "^3.3.0",
+    "stylelint-z-index-value-constraint": "^1.0.0"
   }
 }
