--- a/.stylelintrc
+++ b/.stylelintrc
@@ -216,7 +216,7 @@
     "scss/at-else-empty-line-before": "never",
     "scss/at-else-if-parentheses-space-before": "always",
     "scss/at-extend-no-missing-placeholder": true,
-    "scss/at-function-named-arguments": "always",
+    "scss/at-function-named-arguments": "newer",
     "scss/at-function-parentheses-space-before": "never",
     "scss/at-if-closing-brace-newline-after": "always-last-in-chain",
     "scss/at-mixin-argumentless-call-parentheses": "always",
