--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start1": "http-server",
     "start": "npm-run-all --parallel liveserver watch --open=/static",
+    "gulp": "gulp",
     "liveserver": "live-server",
     "watch": "node-sass sass/main.scss static/css/main.css -w",
     "build": "node-sass sass/main.scss static/css/main.css --output-style compressed"
@@ -24,18 +25,25 @@
   },
   "homepage": "https://github.com/valador/barbershop#readme",
   "devDependencies": {
+    "autoprefixer": "^9.1.5",
     "babel-eslint": "^9.0.0",
-    "eslint": "^5.6.0",
+    "cssnano": "^4.1.4",
+    "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-compat": "^2.5.1",
     "eslint-plugin-react": "^7.11.1",
+    "gulp": "^3.9.1",
+    "gulp-connect": "^5.6.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sourcemaps": "^2.6.4",
     "node-sass": "^4.9.3",
     "npm-run-all": "^4.1.3",
-    "stylelint": "^9.5.0",
+    "postcss-import": "^12.0.0",
+    "stylelint": "^9.6.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-declaration-strict-value": "^1.0.4",
-    "stylelint-no-unsupported-browser-features": "^3.0.1",
-    "stylelint-scss": "^3.3.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.2",
+    "stylelint-scss": "^3.3.1",
     "stylelint-z-index-value-constraint": "^1.0.0"
   }
 }
