--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "gulp",
     "watch": "gulp watch",
-    "build": "gulp scss"
+    "build": "gulp scss",
+    "build2": "node-sass sass/main.scss static/css/main.css --output-style compressed"
   },
   "description": "",
   "main": "server.js",
@@ -36,6 +37,8 @@
     "gulp-sourcemaps": "^2.6.4",
     "node-sass": "^4.9.3",
     "npm-run-all": "^4.1.3",
+    "postcss-advanced-variables": "^2.3.3",
+    "postcss-functions": "^3.0.0",
     "postcss-import": "^12.0.0",
     "precss": "^3.1.2",
     "stylelint": "^9.6.0",
