--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "sedona",
   "version": "0.0.1",
-  "dependencies": {
-    "connect-modrewrite": "^0.10.2",
-    "express": "^4.16.3"
-  },
+  "dependencies": {},
   "scripts": {
     "start": "gulp",
     "watch": "gulp watch",
@@ -37,8 +34,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "node-sass": "^4.9.3",
     "npm-run-all": "^4.1.3",
-    "postcss-advanced-variables": "^2.3.3",
-    "postcss-functions": "^3.0.0",
+    "postcss-easy-import": "^3.0.0",
     "postcss-import": "^12.0.0",
     "precss": "^3.1.2",
     "stylelint": "^9.6.0",
