--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sedona",
   "version": "0.0.1",
   "dependencies": {
-    "postcss-simple-vars": "^5.0.1"
+    "gulp-rename": "^1.4.0"
   },
   "scripts": {
     "start": "gulp",
@@ -33,15 +33,9 @@
     "gulp": "^4.0.0",
     "gulp-connect": "^5.6.1",
     "gulp-postcss": "^8.0.0",
-    "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
-    "node-sass": "^4.9.3",
     "npm-run-all": "^4.1.3",
-    "postcss-advanced-variables": "^2.3.3",
-    "postcss-custom-properties": "^8.0.8",
-    "postcss-easy-import": "^3.0.0",
     "postcss-import": "^12.0.0",
-    "postcss-nested": "^4.1.0",
     "precss": "^3.1.2",
     "stylelint": "^9.6.0",
     "stylelint-config-standard": "^18.2.0",
