--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "sedona",
   "version": "0.0.1",
-  "dependencies": {
-    "gulp-rename": "^1.4.0"
-  },
+  "dependencies": {},
   "scripts": {
     "start": "gulp",
     "watch": "gulp watch",
-    "build": "gulp scss",
-    "build2": "node-sass sass/main.scss static/css/main.css --output-style compressed"
+    "build": "gulp sass"
   },
   "description": "",
-  "main": "server.js",
+  "main": "",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/valador/sedona.git"
@@ -33,6 +30,7 @@
     "gulp": "^4.0.0",
     "gulp-connect": "^5.6.1",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sourcemaps": "^2.6.4",
     "npm-run-all": "^4.1.3",
     "postcss-import": "^12.0.0",
